<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/title_mybook" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>