<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.smarteist.autoimageslider.SliderView
            android:layout_marginBottom="10dp"
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

        <LinearLayout
            android:layout_below="@id/image_slider"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginBottom="5dp"
                android:text="@string/book_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:background="@color/green"/>

            <LinearLayout
                android:id="@+id/btn_view_all_book_new"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="@color/donker"
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="20dp"
                android:id="@+id/recycler_book_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:text="@string/book_most"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:id="@+id/btn_view_all_book_most"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="@color/donker"
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="20dp"
                android:id="@+id/recycler_book_most"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:text="Rekomendasi Buku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:background="@color/yellow"/>

            <LinearLayout
                android:id="@+id/btn_view_all_book_recommended"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="@color/donker"
                    android:text="@string/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="20dp"
                android:id="@+id/recycler_book_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>


</ScrollView>